Temporary fix for scrollbars

--- a/sprint4-frontend/src/assets/styles/basics/_layout.scss
+++ b/sprint4-frontend/src/assets/styles/basics/_layout.scss
@@ -6,6 +6,7 @@
     grid-template-rows: 1fr auto;
     gap: 8px;
     padding: 8px;
+    overflow-y: auto;
     //MAYBE REMOVE THE PADDING IF NEEDED
     // height: 100vh;
 
@@ -14,7 +15,7 @@
         "footer footer";
 
     .main-view {
-        overflow-y: auto;
+        // overflow-y: auto;
         // display: grid;
         // grid-template-rows: auto 1fr;
     }
@@ -49,6 +50,7 @@
 
 .main-layout-collapsed {
     display: grid;
+    height: 100vh;
 
     grid-template-columns: 80px 1fr;
     grid-template-rows: 1fr auto;
@@ -59,10 +61,7 @@
         "side-bar main-view"
         "footer footer";
 
-    .main-view {
-        height: 100vh;
-        max-height: 100%;
-    }
+    .main-view {}
 
     @include for-narrow-layout {
         grid-template-columns:
