--- a/sprint4-frontend/src/assets/styles/views/HomePage.scss
+++ b/sprint4-frontend/src/assets/styles/views/HomePage.scss
@@ -1,6 +1,6 @@
 .main-view {
-    overflow-y: auto;
-    overflow: hidden;
+    overflow-x: hidden;
+    // overflow: hidden;
     background-color: $clr8;
     border-radius: 7px;
 
